# mannager-source

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  html.html  index.html
.github/workflows/: release.yml
assets/flatpak/: org.tsuza.mannager-source.json
assets/linux/: com.github.tsuza.mannager-source.appdata.xml  com.github.tsuza.mannager-source.desktop  org.suza.mannager-source.desktop  org.tsuza.mannager-source.appdata.xml  org.tsuza.mannager.appdata.xml  org.tsuza.mannager.desktop
assets/linux/flatpak/: com.github.tsuza.mannager-source.json  generated-sources.json  org.tsuza.mannager.json
assets/windows/: mannager.rc
fonts/: icons.toml  mannagericons.json
scripts/: build-windows-installer.sh  build-windows.sh  flatpak.sh  generate-icons.sh  package-linux.sh
src/: core.rs  icon.rs  main.rs  ui.rs  update.rs  utils.rs
src/core/: depotdownloader.rs  metamod.rs  portforwarder.rs  sourcemod.rs
src/ui/: components.rs  games.rs  icons.rs  screen.rs  server.rs  style.rs  themes.rs
src/ui/components/: metered_progress_bar.rs  modal.rs  notification.rs  progress_bar.rs  progress_stepper.rs  selectable_text.rs  spinner.rs  textinput_terminal.rs  toggle_button_group.rs  tooltip.rs  typed_input.rs
src/ui/components/textinput_terminal/: cursor.rs  editor.rs  value.rs
src/ui/screen/: loading.rs  serverboot.rs  servercreation.rs  serverlist.rs
src/ui/style/: icon.rs  tf2.rs
src/ui/themes/: tf2.rs
src/ui/themes/tf2/: button.rs  checkbox.rs  circular_spinner.rs  container.rs  dialog.rs  dragking.rs  float.rs  markdown.rs  menu.rs  metered_progress_bar.rs  number_input.rs  progress_bar.rs  rule.rs  scrollable.rs  selectable_text.rs  svg.rs  sweeten_column.rs  table.rs  text.rs  text_input.rs  toggler.rs
wix/: license.rtf  main.wxs
