[package]
name = "mannager"
version = "0.1.0"
license = "MIT"
build = "build.rs"
edition = "2021"

[dependencies]
directories = "5.0.1"
flate2 = "1.0.33"
iced = { version = "0.13.1", features = ["svg", "tokio", "multi-window", "debug"]}
iced_aw = { version = "0.11.0", features = ["number_input", "menu"] }
notify-rust = "4.11.3"
open = "5.3.0"
portforwarder-rs = "0.1.1"
reqwest = "0.12.7"
rfd = "0.15.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = {version = "1.40.0", features = ["full"]}
toml = "0.8.19"
unicode-segmentation = "1.0"
zip = { version = "2.2.0", features = ["deflate-flate2"] }
dragking = { git = "https://github.com/airstrike/dragking", branch = "on_drag_maybe"}

[target.'cfg(unix)'.dependencies]
pty-process = {version = "0.4.0", features = ["async"]}
tar = "0.4.42"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1.1"
windows_exe_info = "0.4"