[package]
name = "mannager"
version = "0.1.0"
license = "MIT"
build = "build.rs"
edition = "2024"

[dependencies]
directories = "5.0.1"
flate2 = "1.0.33"
iced = { git = "https://github.com/iced-rs/iced", features = ["svg", "tokio", "debug", "image", "advanced", "sipper"]}
iced_aw = { git = "https://github.com/iced-rs/iced_aw", features = ["number_input", "menu"] }
iced_runtime = { git = "https://github.com/iced-rs/iced" }
iced_core = { git = "https://github.com/iced-rs/iced.git" }
notify-rust = { version = "4.11.3", features = ["async"] }
open = "5.3.0"
portforwarder-rs = "0.1.1"
reqwest = "0.12.7"
rfd = "0.15.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = {version = "1.40.0", features = ["full"]}
toml = "0.8.19"
unicode-segmentation = "1.0"
zip = { version = "2.2.0", features = ["deflate-flate2"] }
dragking = { git = "https://github.com/tsuza/dragking", branch = "feature/on_drag_maybe"  }
num-traits = {version = "0.2.19" }
decoder = "0.0.3"
snafu = "0.8.6"
igd = "0.12.1"
iced_palace = { git = "https://github.com/hecrj/iced_palace.git", branch = "node-editor" }

[target.'cfg(unix)'.dependencies]
pty-process = {version = "0.4.0", features = ["async"]}
tar = "0.4.42"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1.1"
windows_exe_info = "0.4"

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced_core.git = "https://github.com/iced-rs/iced.git"
iced_widget.git = "https://github.com/iced-rs/iced.git"
iced_debug.git = "https://github.com/iced-rs/iced.git"

